admin/6-admin-gql-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: admin
  name: admin-gql-deploy
spec:
  selector:
    matchLabels:
      app: admin-gql
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: admin-gql
    spec:
      containers:
        - name: admin-gql
          image: 111111
          # image: registry.hum.com:5443/perfect-gql-prod:111023.142411
          imagePullPolicy: Always
          ports:
            - containerPort: 50111
          readinessProbe:
            tcpSocket:
              port: 50111
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 50111
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        - name: docker-sec
---
apiVersion: v1
kind: Service
metadata:
  namespace: admin
  name: admin-gql-svc
spec:
  ports:
    - port: 80
      targetPort: 50111
      protocol: TCP
      name: http
  selector:
    app: admin-gql
---
