admin/99-atway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atwaygql-ing
  namespace: admin
  annotations:
    # kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    # nginx.ingress.kubernetes.io/body-size: 1024m
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 50m
    # nginx.ingress.kubernetes.io/client-max-body-size: 50m
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    # nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    # nginx.ingress.kubernetes.io/limit-rps: "99999999"
    # nginx.ingress.kubernetes.io/limit-rpm: "300"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    # nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
    # nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    # nginx.ingress.kubernetes.io/session-cookie-expires: "300"
    # nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: atway-tls
    hosts:
    - www.atway.in
    - atway.in
  rules:
  - host: www.atway.in
    http:
      paths:
      - path: /v4
        pathType: Prefix
        backend:
          service:
            name: admin-gql-svc
            port:
              number: 80
